@@ -1,0 +1,27 @@
+#!/bin/bash
+
+# Copyright (C) 2014 José Antonio Calvo Fernández <jacalvo@zentyal.com>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License, version 2, as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+for dir in common conf files images profiles scenarios scripts tests
+do
+    mkdir $dir
+done
+
+cp /etc/anste/anste.conf conf/
+cp /usr/share/anste/images/ubuntu-saucy.yaml images/
+cp /usr/share/anste/scripts/write-saucy-sources.sh scripts/
+cp /usr/share/anste/scenarios/sample.yaml scenarios/
+cp -r /usr/share/anste/tests/sample tests/
