@@ -1,4 +1,5 @@
 HEAD
+    + Added anste-init command to create the directory structure of a project
     + Added python-anste wrapper for python-selenium
     + Remove old Selenium 1.0 support
     + Remove deprecated Xen stuff
